--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Employee List</h1>
-        <div id="employee-container" class="row g-4"></div>
+        <div id="employee-container" class="row g-4">
+            <div id="spinner" style="display: none;">
+                <i class="fa fa-spinner fa-spin"></i> Loading . . .
+            </div>            
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
